tests/error/inout_errors/drop_after_call.err
Error: Drop violation (at $FILE:15:7)
   | 
13 | @guppy(module)
14 | def test() -> None:
15 |    foo(qubit())
   |        ^^^^^^^ Value with non-droppable type `qubit` would be leaked after
   |                `foo` returns

Help: Consider assigning the value to a local variable before passing it to
`foo`

Guppy compilation failed due to 1 previous error
